<resources>
    <string name="app_name">Aakash</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_friends">Friends</string>
    <string name="title_profile">Profile</string>
    <string name="todo">TODO</string>
    <string name="share">Share</string>
    <string name="like">Like(00)</string>
    <string name="comment">Comment(00)</string>
    <string name="example_text">example of the text</string>
    <string name="desc">description</string>
    <string name="unknown">Unknown</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_post">Add Post</string>
    <string name="member">Member</string>
    <string name="logout">LogOut</string>
    <string name="post_not_found">Post Not Found</string>
    <string name="web_root_url">https://aakash-12f7e.web.app</string>
</resources>