<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_baseline_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_friends"
        android:icon="@drawable/ic_baseline_friends"
        android:title="@string/title_friends" />

    <item
        android:id="@+id/navigation_add_post"
        android:icon="@drawable/ic_baseline_add_circle_outline"
        android:title="@string/add_post" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_baseline_notifications"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_profile"
        android:title="@string/title_profile" />

</menu>