<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/postUserIcon"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_baseline_profile"
                        app:civ_border_color="@color/purple_500"
                        app:civ_border_width="1dp" />

                    <TextView
                        android:id="@+id/postUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:maxLength="20"
                        android:text="@string/unknown"
                        android:textColor="@color/purple_500"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_baseline_more" />

            </RelativeLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@color/black">

            <ImageView
                android:id="@+id/postImg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="TODO"
                android:scaleType="centerCrop"
                android:src="@drawable/aakash_icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/postTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif"
            android:text="@string/example_text"
            android:textColor="@color/black"
            android:visibility="gone"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/postImg"
            app:layout_constraintStart_toStartOf="parent" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/likeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:drawablePadding="3dp"
                android:text="@string/like"
                android:textColor="@color/purple_500"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_baseline_thumb_up" />

            <TextView
                android:id="@+id/commentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:drawablePadding="3dp"
                android:text="@string/comment"
                android:textColor="@color/purple_500"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_baseline_comment" />

            <TextView
                android:id="@+id/shareBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:drawablePadding="3dp"
                android:text="@string/share"
                android:textColor="@color/blue"
                android:textSize="15sp"
                app:drawableStartCompat="@drawable/ic_baseline_share" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/black" />

    </LinearLayout>


</RelativeLayout>