<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CommentActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/cPostThumbnail"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="@+id/cBoxClose"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/cPostTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/example_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cPostThumbnail" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cPostTitle">

                <TextView
                    android:id="@+id/likeBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:drawablePadding="3dp"
                    android:text="@string/like"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp"
                    app:drawableStartCompat="@drawable/ic_baseline_thumb_up" />

                <TextView
                    android:id="@+id/commentBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:drawablePadding="3dp"
                    android:text="@string/comment"
                    android:textColor="@color/purple_500"
                    android:textSize="15sp"
                    app:drawableStartCompat="@drawable/ic_baseline_comment" />

                <TextView
                    android:id="@+id/shareBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:drawablePadding="3dp"
                    android:text="@string/share"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    app:drawableStartCompat="@drawable/ic_baseline_share" />


            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cBoxClose"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/cCommentBoxOpen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/comment_input_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/cUserIcon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_profile"
            app:civ_border_color="@color/black"
            app:civ_border_width="1dp"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/cUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingStart="2dp"
            android:text="username"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="1dp"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/cCommentBoxClose"
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:contentDescription="TODO"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_baseline_close" />
        </LinearLayout>


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/cCommentInputBox"
        app:layout_constraintEnd_toEndOf="@+id/cCommentBoxOpen"
        app:layout_constraintStart_toStartOf="@+id/cCommentBoxOpen"
        app:layout_constraintTop_toBottomOf="@+id/cCommentBoxOpen"
        tools:listitem="@layout/comment_card_view" />

    <LinearLayout
        android:id="@+id/cCommentInputBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/comment_input_bg"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/cComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="Enter The Comment"
                android:imeOptions="flagNoExtractUi"
                android:inputType="textPersonName"
                android:maxLength="100"
                android:maxLines="1"
                android:padding="5dp"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/cCommentBtn"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_comment_send" />

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>